--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Test Git</title>
 </head>
+<style>
+	body{
+		background-color: red;
+	}
+</style>
 <body>
 	<div>Test 2</div>
 	<div>Test 4</div>
